--- a/MAY2015/atogaki.tex
+++ b/MAY2015/atogaki.tex
@@ -33,9 +33,9 @@
 
 \small{2014年11月18日発行}\\
 　\normalsize{著　者・・・・・東京大学理学部数学科有志}\\
-　\normalsize{発行人・・・・・宮本拓磨}\\
-　\normalsize{表　紙・・・・・浅尾泰彦}\\
-　\normalsize{裏表紙・・・・・山崎由佳}\\
+　\normalsize{発行人・・・・・伊藤克哉}\\
+　\normalsize{表　紙・・・・・郷田昌稔}\\
+%%　\normalsize{裏表紙・・・・・山崎由佳}\\
 \begin{picture}(100,1)
 \setlength{\unitlength}{1truemm}
 \thinlines
