--- a/MAY2015/miyamoto.tex
+++ b/MAY2015/miyamoto.tex
@@ -1,4 +1,4 @@
-\Chapter{Counterexamples in Topology 傑作撰}
+\Chapter{Counterexamples in Topology 傑作撰（宮本）}
 \Section{\S 1.概説}
 \subsubsection*{反例の本}
 数学は定理と証明を繰り返すだけではなかなか身につきにくく，適切な{\bf 反例}を考えることで概念の有用性を理解できることが多い，というのは皆さん経験したことだと思います．歴史的にも，ワイエルシュトラスが連続かつ至るところ微分不可能な「病理的関数」を発見したことで，それまで「連続関数は大体のところで微分可能なんじゃないの〜？」と信じられていた雰囲気がぶち壊され，解析学が$\varepsilon - \delta$論法による厳密化へと進展した．このようなことが度々あります．証明によって世界を広げていくというのが数学の基本だと思いますが，反例が「ある」という事実もまた心強いものです．\par
