タイポを修正。

--- a/MAY2015/yamamoto.tex
+++ b/MAY2015/yamamoto.tex
@@ -216,7 +216,7 @@ f_{+}(x)=\max \left\{f(x),0\right\} , f_{-}(x)=\max \left\{-f(x),0\right\} \nonu
 \end{enumerate}
 \end{itembox}
 \par なお, 上の$f_{+}, f_{-}$は後に出てくるLebesgue積分の定義でも用います. 
-\par 可測関数の例を挙げてみます. 例えば, 単関数はそのまま可測関数です. 上で定義した正値可測関数$f$について, $f_{+}(x)=f(x)$は当然正値可測関数, $f_{-}(x)=\equiv 0$は単関数だから正値可測関数です. したがって, 正値可測関数もまた可測関数であることが分かります. また, 1次元Lebesgue測度空間の入った$\mathbb{R}$上の連続関数もまた可測関数であることが分かっています. 
+\par 可測関数の例を挙げてみます. 例えば, 単関数はそのまま可測関数です. 上で定義した正値可測関数$f$について, $f_{+}(x)=f(x)$は当然正値可測関数, $f_{-}(x)\equiv 0$は単関数だから正値可測関数です. したがって, 正値可測関数もまた可測関数であることが分かります. また, 1次元Lebesgue測度空間の入った$\mathbb{R}$上の連続関数もまた可測関数であることが分かっています. 
 \par これで準備が整いました. $E$上の可測関数$f$に対し, そのLebesgue積分$\displaystyle \int_{E}fd\mu$を考えます. 簡単のため, まず正値可測関数におけるLebesgue積分から考えます. 
 \par 定義域$E$の正値可測関数$f$に対し, 極限関数を$f$とする単関数の単調増大列$\{f_{n}(x)\}_{n=1}^{\infty}$をとります. 各$f_{n}(x)$の取り得る値を$a_{n,1},a_{n,2},\ldots,a_{n,m_{n}}$とおき, さらに各$i=1,2,\ldots,m_{n}$に対し, $\displaystyle E_{n,i}=\left\{x\in E \mid f(x)=a_{n,i}\right\}$ と定めます. このときの値
 \begin{eqnarray}
