欧文引用符 “ ” はLaTeXでは `` '' を使う。

--- a/MAY2015/miyamoto.tex
+++ b/MAY2015/miyamoto.tex
@@ -2,7 +2,7 @@
 \Section{\S 1.概説}
 \subsubsection*{反例の本}
 数学は定理と証明を繰り返すだけではなかなか身につきにくく，適切な{\bf 反例}を考えることで概念の有用性を理解できることが多い，というのは皆さん経験したことだと思います．歴史的にも，ワイエルシュトラスが連続かつ至るところ微分不可能な「病理的関数」を発見したことで，それまで「連続関数は大体のところで微分可能なんじゃないの〜？」と信じられていた雰囲気がぶち壊され，解析学が$\varepsilon - \delta$論法による厳密化へと進展した．このようなことが度々あります．証明によって世界を広げていくというのが数学の基本だと思いますが，反例が「ある」という事実もまた心強いものです．\par
-今回は位相空間論の反例集である“{\bf Counterexamples in Topology }”  (Lynn Steen and J. Arthur Seebach, Jr)の内容から幾つか参考になりそうな例を紹介してみたいと思います．
+今回は位相空間論の反例集である``\textbf{Counterexamples in Topology}''  (Lynn Steen and J. Arthur Seebach, Jr)の内容から幾つか参考になりそうな例を紹介してみたいと思います．
 \subsubsection*{内容紹介}
 本書は位相空間論の反例を大量に収録したある意味「病的な」本といえるかもしれませんが，学習の上で参照するにはうってつけのほんだと思います．最大の特徴は，豊富なチャートにあります．例えば，正則であって正規でない\footnote{正規という性質からは正則という性質が従います．（正規・正則という時には$T_0$公理を仮定します．）}位相空間を探そうと思ったら，分離公理について書かれた19ページの表を見て，反例90番が該当するということがすぐに分かります．定義間の主従関係が反例付きで載っていますし，巻末には各例について，どの公理を満たし，どの公理を満たさないかが網羅された表が掲載されており，検索に供するようになっています．\par
 第一部では位相の様々な定義（分離公理，コンパクト性，連結性，距離空間）を簡単に復習することができます．第二部がメインコンテンツの反例集で，143個の例が掲載されています．第三部は「位相空間はいつ距離空間になるか？」という距離化定理にまつわるサーベイとなっています（ここにも反例が載っています）．付録の第四部では前述の網羅された表や演習問題，参考文献等が掲載されています．
