数式中で comma (,) 区切りのモノを省略する時は \ldots を使う。

--- a/MAY2015/kikuchi.tex
+++ b/MAY2015/kikuchi.tex
@@ -85,7 +85,7 @@ Black-Scholesモデルについて解説します．
 \\
 ある株式を原資産とする満期日$T=1$，行使価格$K=125$の
 ヨーロピアンコールオプションについて考えます．
-二項モデルでは，時間は離散的なもの($t=1,2,3,\cdots$)
+二項モデルでは，時間は離散的なもの($t=1,2,3,\ldots$)
 として，各時点において株価は次の時点に移るときに
 2つの可能性のみを考えます．
 ここでは，原資産である株式の値動きは次のようになるとします．
