--- a/MAY2015/yamamoto.tex
+++ b/MAY2015/yamamoto.tex
@@ -203,7 +203,7 @@ E_i=f^{-1}\left(\{ a_i\}\right)=\left\{x\in E\mid f(x)=a_i \right\} \nonumber
 \end{eqnarray}
 が$\mathcal{M}$の元である($E_i\in\mathcal{M}$)ことをいう. 
 \end{itembox}
-\par 1次元Lebesgue測度空間としての$\mathbb{R}$上の単関数の簡単な例としては, 例えば$(0,1],(1,2],…,(n-1,n]$上でそれぞれ0以上の実数$a_1,…,a_n$を値に取り, それ以外では0となるような「階段のような」関数が挙げられます. 一見病的な例としては, $\mathcal{Q}$上で1, $\mathcal{Q}^c$上で0となる関数(Dirichletの関数)が挙げられます. 
+\par 1次元Lebesgue測度空間としての$\mathbb{R}$上の単関数の簡単な例としては, 例えば$(0,1],(1,2],\ldots,(n-1,n]$上でそれぞれ0以上の実数$a_1,\ldots,a_n$を値に取り, それ以外では0となるような「階段のような」関数が挙げられます. 一見病的な例としては, $\mathcal{Q}$上で1, $\mathcal{Q}^c$上で0となる関数(Dirichletの関数)が挙げられます. 
 \par この上で, 可測関数を定義します. 
 \begin{itembox}[l]{定義(可測関数)}
 \begin{enumerate}
