--- a/MAY2015/zetamura.tex
+++ b/MAY2015/zetamura.tex
@@ -56,7 +56,7 @@ $s\in \mathbb{Z}$とする. $a\in D$のとき
 \end{cases}
 \end{eqnarray*}
 正則関数$f(z)$に対し$\displaystyle{\lim_{z\to a}f(z)}$が発散し, $\displaystyle{\lim_{z\to a}(z-a)^m f(z)}$が0以外の値に収束するとき, $z=a$を$f(z)$の$m$位の極という.\\
-$f(z)$が$D$内に1位の極$z=a_n\,(n=1,2,\cdots)$をもち, $\displaystyle{\lim_{z\to a_n}(z-a_n)f(z)}=b_n$とすると次が成り立つ
+$f(z)$が$D$内に1位の極$z=a_n\,(n=1,2,\ldots)$をもち, $\displaystyle{\lim_{z\to a_n}(z-a_n)f(z)}=b_n$とすると次が成り立つ
 \begin{eqnarray*}
 \frac{1}{2\pi i}\int_{\partial D} f(z)dz = \sum_n b_n
 \end{eqnarray*}
@@ -134,7 +134,7 @@ $x$を$nx$に置き換えると
 \includegraphics[width=50mm]{zetamura3.pdf}
 \end{center}
 \end{wrapfigure}
-式(\ref{eq:3})において,積分経路を逆向きにとることで0以外の1位の極$z=2n\pi i\,(n=\pm1,\pm2,\cdots)$を含む領域に沿った積分とすることができる.値は$-1$倍になる事に注意して
+式(\ref{eq:3})において,積分経路を逆向きにとることで0以外の1位の極$z=2n\pi i\,(n=\pm1,\pm2,\ldots)$を含む領域に沿った積分とすることができる.値は$-1$倍になる事に注意して
 \begin{eqnarray*}
 \lim_{z\to 2n\pi i}(z-2n\pi i)\frac{(-z)^{s-1}}{e^z-1} &=& \lim_{z\to 2n\pi i}\frac{z-2n\pi i}{e^z-e^{2n\pi i}}(-z)^{s-1}\\
 &=& (-2n\pi i)^{s-1}
